[package]
name = "discuss-bot"
version = "0.1.0"
authors = ["Anthony PAGES <anthony.pages@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0.104"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version= "0.10.4", features = ["blocking", "json"] }
futures = "0.3.4"
async-std = { version= "1.5.0", features = ["attributes"] }
tokio = {"version"= "0.2.13", features=["rt-threaded", "macros"]}
regex = "1"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
